4.1.37
- Fixed problem with .(dot) date separator in the calendar headers
- Fixed event copy with daylight saving. (Events that didn't last a full day where not copied to the correct date selected when copied from a summertime to wintertime date.)

22-02-2013 4.1.36
- Fixed caldav problem with tasks
- Updated German
- Don't sync private events anymore on shared calendars with z-push
- Fixed error messages in the task module

20-02-2013 4.1.35
- Read only calendars work in CalDAV
- Implemented free busy access check in participants grid
- limit description of links to 500 chars.
- Upgraded SabreDAV to 1.8.2
- All models are searchable by ID
- Restrict maintenance tasks to command line or tools module access.

15-02-2013 4.1.34
- File module errors fixed.

14-02-2013 4.1.33
- Filesearch does not index new files on the fly when opening them because it 
  can use too many server resources.
- Filesearch didn't index files with () in the filename.
- Filesearch supports PDF with scanned image too now.
- Filesearch OCR language configurable now. See http://wiki4.group-office.com/wiki/Configuration_file#Filesystem_settings
- Set file mtime when updating with webdav
- Skip models in the database check that don't really need to be checked.
- Update English language for email module
- Show linked past appointments as well as linked future appointments in Display Panel.
- Show linked completed tasks as well as linked incomplete tasks in Display Panel.
- Display description of linked tasks and appointments (events) in Display Panel;
- Don't enable info log automatically. Only log when it's set.
- Disappearing event in calendar group view
- Editing recurring event always edited entire series in calendar group view
- Added -q option to cli to be quiet
- Send file handler straight away to avoid browser security measures

12-02-2013 4.1.32
- Remember checkbox values from the export dialog
- "email_on_new" functionality now contains ticket message in email body.
- Sort view calendars