@@ -591,3 +591,5 @@ $l['logFiles']='Logbestanden';
 $l['deleteAllItems']='Verwijder alle items';
 $l['deleteAllItemsAreYouSure']='Weet u zeker dat u alle items wilt verwijderen?';
 $l['sortOrderError']="Sorry, u kunt niet op deze kolom sorteren. Klik aub. op een andere kolom van de tabel om te sorteren.";
+
+$l['maxAttachmentsSizeExceeded']="De totale bestandsgrootte van uw bijlagen ({total}) is groter het maximum ({max}).";
